feat: added dumble jump

--- a/src/main/resources/assets/extendedenchantments/lang/en_us.json
+++ b/src/main/resources/assets/extendedenchantments/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-    "enchantment.extendedenchantments.frost": "Frost"
+    "enchantment.extendedenchantments.frost": "Frost",
+    "enchantment.extendedenchantments.double_jump": "Double Jump"
   }
