initial commit for charm

--- a/src/main/resources/assets/extendedenchantments/lang/en_us.json
+++ b/src/main/resources/assets/extendedenchantments/lang/en_us.json
@@ -1,4 +1,7 @@
 {
     "enchantment.extendedenchantments.frost": "Frost",
-    "enchantment.extendedenchantments.double_jump": "Double Jump"
+    "enchantment.extendedenchantments.double_jump": "Double Jump",
+    "enchantment.extendedenchantments.charm": "Charm",
+
+    "effect.extendedenchantments.charm": "Charm"
   }
